REmoved fb m gl

--- a/config.toml
+++ b/config.toml
@@ -23,8 +23,8 @@ copyright = "© {year}"
   twitter = "https://twitter.com/siddhantsme"
   github = "https://github.com/WickedBrat"
   email = "mailto:harshsrivastav123@gmail.com"
-  facebook = "https://www.facebook.com/siddhant.srivastav.3/"
-  gitlab = "https://gitlab.com/WickedBrat"
+  # facebook = "https://www.facebook.com/siddhant.srivastav.3/"
+  # gitlab = "https://gitlab.com/WickedBrat"
   instagram = "https://instagram.com/siddhantisme"
   linkedin = "https://www.linkedin.com/in/wickedbrat"
   # youtube = "https://www.youtube.com/channel/<your channel>"
