Updates snaps link

--- a/config.toml
+++ b/config.toml
@@ -67,4 +67,4 @@ googleAnalytics = "UA-130399233-1"
   identifier = "snaps"
   name = "snaps"
   title = "Snaps"
-  url = "/snaps"
+  url = "https://www.flickr.com/photos/190329325@N03"
