--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^10.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-particles-js": "^3.4.1",
     "react-slick": "^0.28.1",
     "react-view-slider": "^4.3.2",
     "react-wordcloud": "^1.2.7",
