--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"next-compose-plugins": "^2.2.1",
 		"next-optimized-images": "^2.6.2",
 		"react": "^17.0.1",
+		"react-copy-to-clipboard": "^5.0.3",
 		"react-dom": "^17.0.1",
 		"react-slick": "^0.28.1",
 		"react-wordcloud": "^1.2.7",
